# drinkmaster9000

./: Cargo.toml  README.md  app.py  deploy.sh  requirements.txt  test.py
.github/workflows/: deploy-astro.yml  deploy-node.yml  deploy-rust.yml  deploy.yml
cad-models/: arm.stl  dispenser-cap.stl  holder.stl
client/: package.json  pnpm-lock.yaml
client/src/: config.ts
client/src/components/: button.svelte  checkbox.svelte  dispenser-defaults.svelte  drink-mixer.svelte  edit-dispenser.svelte  edit-dispensers.svelte  edit-drinks.svelte  glass.svelte  header.svelte  input.svelte  servo-angle.svelte  servo-settings.svelte  toaster-wrapper.svelte
client/src/layouts/: default-layout.astro
client/src/lib/: api.ts  use-timing.ts
client/src/models/: api.d.ts  dispenser.d.ts  drink.d.ts  servo.d.ts
client/src/pages/: edit.astro  index.astro
client/src/tests/: mock-data.ts
pi/: Cargo.toml  Cross.toml  config.ron
pi/src/: main.rs
pi/src/lib/: config.rs  mod.rs  pins.rs  state.rs
pi/src/models/: dispenser.rs  drink.rs  mod.rs  pin.rs  pins.rs  sensor.rs  servo.rs
pi/src/routes/: config.rs  dispenser.rs  dispensers.rs  drinks.rs  gpio.rs  mod.rs  ws.rs
scripts/: Dockerfile  deploy-frontend.sh  deploy-pi.sh
server/: Cargo.toml  README.md
server/src/: main.rs
server/src/lib/: mod.rs  pi.rs  pins.rs  state.rs
server/src/routes/: drinks.rs
