[package]
name = "drinkmixer-pi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.0"
ron = "0.8.0"
rppal = "0.14.1"
serde = { version = "1.0.152", features = ["derive"] }
